<resources>
    <string name="app_name">7 Minute Workout</string>
    <string name="start">START</string>
    <string name="my_image_view">My Image View</string>
    <string name="get_ready_for">GET READY FOR</string>
    <string name="_10">10</string>
    <string name="_30">30</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="image">Image</string>
    <string name="upcoming_exercise">UPCOMING EXERCISE</string>
    <string name="you_have_completed_the_workout">You have completed the workout!</string>
    <string name="congratulations">Congratulations!</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="this_will_stop_your_workout_you_ve_come_this_far_are_you_sure_you_want_to_quit">This will stop your workout. You\'ve come this far, are you sure you want to quit?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="are_you">Are you?</string>
    <string name="bmi">BMI</string>
    <string name="calculator">Calculator</string>
    <string name="weight_in_kg">WEIGHT (in kg)</string>
    <string name="height_in_cm">HEIGHT (in cm)</string>
    <string name="your_bmi">YOUR BMI</string>
    <string name="calculate">CALCULATE</string>
    <string name="metric_units">METRIC UNITS</string>
    <string name="us_units">US UNITS</string>
    <string name="feet">feet</string>
    <string name="weight_in_lb">WEIGHT (in lb)</string>
    <string name="inches">inches</string>
    <string name="history">History</string>
    <string name="exercises_completed">EXERCISES COMPLETED</string>
    <string name="no_data_available">NO DATA AVAILABLE</string>
</resources>