<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BMIActivity">
    
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tlb_bmi_activity"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/white" />

    <RadioGroup
        android:id="@+id/rgUnits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tlb_bmi_activity"
        android:layout_margin="10dp"
        android:background="@drawable/drawable_radio_group_tab_background"
        android:orientation="horizontal" >
        
        <RadioButton
            android:id="@+id/rbMetricUnits"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="0.5"
            android:background="@drawable/drawable_units_tab_selector"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/metric_units"
            android:textColor="@drawable/drawable_units_tab_text_color_selector"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbUSUnits"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="0.5"
            android:background="@drawable/drawable_units_tab_selector"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:text="@string/us_units"
            android:textColor="@drawable/drawable_units_tab_text_color_selector"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilMetricUnitWeight"
        android:layout_below="@+id/rgUnits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:boxStrokeColor="@color/colorAccent"
        app:hintTextColor="@color/colorAccent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etMetricUnitWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight_in_kg"
            android:inputType="numberDecimal"
            android:textSize="16sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilMetricUnitHeight"
        android:layout_below="@+id/tilMetricUnitWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:boxStrokeColor="@color/colorAccent"
        app:hintTextColor="@color/colorAccent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etMetricUnitHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/height_in_cm"
            android:inputType="numberDecimal"
            android:textSize="16sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUSUnitWeight"
        android:layout_below="@+id/rgUnits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:boxStrokeColor="@color/colorAccent"
        app:hintTextColor="@color/colorAccent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etUSUnitWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight_in_lb"
            android:inputType="numberDecimal"
            android:textSize="16sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_below="@+id/rgUnits"
        android:layout_centerHorizontal="true" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUSUnitHeightFeet"
        android:layout_below="@+id/tilMetricUnitWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/view"
        app:boxStrokeColor="@color/colorAccent"
        app:hintTextColor="@color/colorAccent"
        android:visibility="visible"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etUSUnitHeightFeet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/feet"
            android:inputType="numberDecimal"
            android:textSize="16sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUSUnitHeightInches"
        android:layout_below="@+id/tilMetricUnitWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/view"
        app:boxStrokeColor="@color/colorAccent"
        app:hintTextColor="@color/colorAccent"
        android:visibility="gone"
        tools:visibility="visible"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etUSUnitHeightInches"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inches"
            android:inputType="numberDecimal"
            android:textSize="16sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/llDisplayBMIResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/tilMetricUnitHeight"
        android:layout_marginTop="16dp"
        android:visibility="invisible"
        tools:visibility="visible">

        <TextView
            android:id="@+id/tvYourBMI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/your_bmi"
            android:textAllCaps="true"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvBMIValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="18sp"
            tools:text="15.0" />

        <TextView
            android:id="@+id/tvBMIType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textSize="18sp"
            tools:text="Normal" />

        <TextView
            android:id="@+id/tvBMIDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textSize="18sp"
            tools:text="Normal" />


    </LinearLayout>

    <Button
        android:id="@+id/btnCalculateUnits"
        android:layout_below="@id/llDisplayBMIResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="35dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/calculate"
        android:textColor="@color/white"
        android:textSize="16sp" />

</RelativeLayout>